syntax = "proto3";

package user;

service UserService {
  rpc ChangeName(ChangeNameRequest) returns (BaseResponse);
}

message ChangeNameRequest {
  string newName = 1;
}

message BaseResponse {
  string message = 1;
  string statusCode = 2;
}